--- a/ch1_Highlights_of_Linear_ALgebra.ipynb
+++ b/ch1_Highlights_of_Linear_ALgebra.ipynb
@@ -138,13 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[ 4,  6],\n       [ 4,  8],\n       [ 6, 14]])"
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,8 +163,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T11:43:11.667812100Z",
-     "start_time": "2024-03-10T11:43:11.582340400Z"
+     "end_time": "2024-03-14T03:05:45.298077500Z",
+     "start_time": "2024-03-14T03:05:45.176185500Z"
     }
    },
    "id": "41b3da14bb02e621"
@@ -1003,12 +1003,18 @@
    "id": "ea93dbbd087ef731"
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T03:05:45.298077500Z",
+     "start_time": "2024-03-14T03:05:45.238685600Z"
+    }
    },
-   "id": "d420a7ea71d0937c"
+   "id": "cbea7b8f57b82a33"
   }
  ],
  "metadata": {
