--- a/ch_3_Four_Fundamental_Subspace.ipynb
+++ b/ch_3_Four_Fundamental_Subspace.ipynb
@@ -165,6 +165,16 @@
    "id": "6bc34ec7635091fc"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "![fig_1_1](./fig_1_1.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6a5946a3e0fa817d"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -172,11 +182,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-25T03:25:11.715191600Z",
-     "start_time": "2024-03-25T03:25:11.684734500Z"
+     "end_time": "2024-03-25T03:33:16.070744500Z",
+     "start_time": "2024-03-25T03:33:16.042092200Z"
     }
    },
-   "id": "f8010ba0bf4beb2b"
+   "id": "69eab6485f8cff74"
   }
  ],
  "metadata": {
