--- a/ch_3_Four_Fundamental_Subspace.ipynb
+++ b/ch_3_Four_Fundamental_Subspace.ipynb
@@ -175,18 +175,42 @@
    "id": "6a5946a3e0fa817d"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "That example had exactly one $u$ and $v$ and $x$ and $y$.\n",
+    "\n",
+    "All four subspaces were 1 dimensional(just lines).\n",
+    "\n",
+    "**Always the $u$'s and $v$'s and $x$'s and $y$'s will be independent vectors-they give a \"basis\" for each of the subspace.**\n",
+    "\n",
+    "A larger matrix will need more than one basis vector per subspace.\n",
+    "\n",
+    "The choice of basis vectors is a crucial step in computing."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5d6e1bb133780945"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## EXAMPLE 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bcb2964979e08e6b"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-25T03:33:16.070744500Z",
-     "start_time": "2024-03-25T03:33:16.042092200Z"
-    }
+    "collapsed": false
    },
-   "id": "69eab6485f8cff74"
+   "id": "e04782281eee0578"
   }
  ],
  "metadata": {
