--- a/ch_3_Four_Fundamental_Subspace.ipynb
+++ b/ch_3_Four_Fundamental_Subspace.ipynb
@@ -203,6 +203,150 @@
    "id": "bcb2964979e08e6b"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\n",
+    "B\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "1 & -2 & -2 \\\\\n",
+    "3 & -6 & -6 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "$$ \n",
+    "\n",
+    "has $m$ =2 and $n$=3. Subspaces in $R^3$ and $R^2$."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "43909d19597cfed6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Going from A to B, two subspaces change and two subspaces do not change.\n",
+    "\n",
+    "The column space of B is still in $R^2$. It has the same basis vector.\n",
+    "\n",
+    "But now, there are $n$=3 numbers in the rows of B and left half of below figure is in $R^3$.\n",
+    "\n",
+    "There is still only one $v$ in the row space!\n",
+    "\n",
+    "The rank is still $r$=1 because both rows of this B go in the same direction.\n",
+    "\n",
+    "**With $n$=3 unknowns and only $r$=1 independent equation, $Bx$=0 will have 3-1=2 independent solutions $x_1$ and $x_2$.**\n",
+    "\n",
+    "All solutions go into the nullspace.\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Bx\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "1 & -2 & -2 \\\\\n",
+    "3 & -6 & -6 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "a \\\\\n",
+    "b \\\\\n",
+    "c \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "has solutions\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "x_1\n",
+    "\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "2 \\\\\n",
+    "1 \\\\\n",
+    "0 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "\\: and\\:\n",
+    "\n",
+    "x_2\n",
+    "\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "2 \\\\\n",
+    "0 \\\\\n",
+    "1 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3c05749cbaaa46ba"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Those vectors $x_1$ and $x_2$ are called special solutions.\n",
+    "\n",
+    "They come from the steps of elimination--and you quickly see that $Bx_1$ = 0 and $Bx_2$=0."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a57a96dbdab11f14"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "But those are not perfect choices in the nullspace of B because the vectors $x_1$ and $x_2$ are not perpendicular.(Dikey)\n",
+    "\n",
+    "We will give strong preference to perpendicular basis vectors.\n",
+    "\n",
+    "Our nullspace $N(B)$ is a plane in $R^3$.\n",
+    "\n",
+    "We can see an orthonormal basis $v_2$ and $v_3$ in that plane.\n",
+    "\n",
+    "The $v_2$ and $v_3$ axes make a 90 degree angle with each other and with $v_1$."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a9d69d728aa97602"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -210,7 +354,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "e04782281eee0578"
+   "id": "b88609eee0fea594"
   }
  ],
  "metadata": {
