--- a/ch_3_Four_Fundamental_Subspace.ipynb
+++ b/ch_3_Four_Fundamental_Subspace.ipynb
@@ -839,7 +839,14 @@
    "cell_type": "markdown",
    "source": [
     "**Statement 3** \n",
-    "\n"
+    "\n",
+    "Each column of A + B is the sum of (column of A) + (column of B)\n",
+    "\n",
+    "rank(A + B) <= rank(A) + rank(B) is always true. It combines bases for $C(A)$ and $C(B)$\n",
+    "\n",
+    "rank(A+ B) = rank(A) + rank(B) is **not** always true. It is certainly falce if A = B = I.\n",
+    "\n",
+    " \n"
    ],
    "metadata": {
     "collapsed": false
@@ -847,18 +854,99 @@
    "id": "2df8de073e60044c"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "**Statement 4**\n",
+    "\n",
+    "$A$ and $A^T$$A$ both have n columns.\n",
+    "\n",
+    "**They also have the same nullspace.**\n",
+    "\n",
+    "So $n$-$r$ is the same for both and the rank $r$ is the same for both.\n",
+    "\n",
+    "Then rank($A^T$)<= rank($A^T$$A$) = rank($A$)\n",
+    "\n",
+    "Exchange A and $A^T$ to show their equal ranks."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cb556156866b177a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Statement 5**\n",
+    "\n",
+    "We are told that A and B have rank $r$.\n",
+    "\n",
+    "By statement 4, $A^TA$ and $BB^T$ have rank $r$.\n",
+    "\n",
+    "Those are $r$ by $r$ matrices so they are invertible.\n",
+    "\n",
+    "So their product $A^TABB^T$.\n",
+    "\n",
+    "Then r = rank of ($A^TABB^T$) <= rank of ($AB$) by statement 1: $A^T$, $B^T$ cannot increase rank.\n",
+    "\n",
+    "We also know rank (AB) <= rank A = $r$.\n",
+    "\n",
+    "So we have proved that AB has rank exactly $r$.\n",
+    "\n",
+    "Note:\n",
+    "\n",
+    "This does not mean that every product of rank $r$ matrices will have rank $r$.\n",
+    "\n",
+    "Statement 5 assumes that A has exactly $r$, columns and B has $r$ rows. BA can easily fail.\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "A\n",
+    "\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\\:\\:\\:\n",
+    "B\n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "1 & 2 & -3 \\\\\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\\:\\:\\:\\:\\:\\:\n",
+    "\n",
+    "AB\\:has\\:rank\\:1.\n",
+    "\n",
+    "\\:\\:\\:\\:\\:\\:\n",
+    "\n",
+    "But\\:BA\\:is\\:zero\\:!!.\\:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1a567ab4081d312d"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T16:05:30.479615700Z",
-     "start_time": "2024-03-30T16:05:30.463956200Z"
-    }
+    "collapsed": false
    },
-   "id": "a142a32ceedaf676"
+   "id": "a5351772d13b74af"
   }
  ],
  "metadata": {
