--- a/ch_4_Elimination and A=LU.ipynb
+++ b/ch_4_Elimination and A=LU.ipynb
@@ -491,7 +491,11 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-02T06:48:59.220209300Z",
+     "start_time": "2024-04-02T06:48:59.204528400Z"
+    }
    },
    "id": "b17b59eadeb6816f"
   }
